# fastapi-sample

./: Dockerfile  LICENSE  README.rst  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
buildenv.d/: format.50.md  lint.50.md  test.50.md
fastapi_sample/: __init__.py
fastapi_sample/types/: option.py
tests/: test_fastapi_sample.py
