[tool.poetry]
name = "fastapi-sample"
version = "0.1.0"
description = "Sample server program using FastAPI"
authors = ["INAJIMA Daisuke <inajima@gmail.com>"]

[tool.poetry.dependencies]
docformatter = "^1.4"
fastapi = "^0.65.2"
poethepoet = "^0.10.0"
python = "^3.9"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^21.4.3"
flake8-isort = "^4.0.0"
isort = "^5.9.1"
mypy = "^0.910"
pytest = "^5.2"

[tool.poe.env]
LINT_TARGETS = "fastapi_sample tests"

[tool.poe.tasks]
fmt-black = "black $LINT_TARGETS"
fmt-docformatter = "docformatter -ri $LINT_TARGETS"
fmt-isort = "isort $LINT_TARGETS"
lint-black = "black --check --diff $LINT_TARGETS"
lint-docformatter = "docformatter -rc $LINT_TARGETS"
lint-flake8 = "flake8 $LINT_TARGETS"
lint-isort = "isort --check --diff $LINT_TARGETS"
lint-mypy = "mypy $LINT_TARGETS"
lint-pyright = "pyright $LINT_TARGETS"
fmt = ["fmt-isort", "fmt-black", "fmt-docformatter"]
lint = ["lint-pyright", "lint-mypy", "lint-flake8", "lint-docformatter", "lint-black", "lint-isort"]
start = "uvicorn --host 0.0.0.0 fastapi_sample:app"
test = "pytest"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
strict = true
implicit_reexport = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
