[tool.poetry]
name = "fastapi-sample"
version = "0.1.0"
description = "Sample server program using FastAPI"
authors = ["INAJIMA Daisuke <inajima@gmail.com>"]

[tool.poetry.dependencies]
fastapi = "^0.74"
poethepoet = "^0.12"
python = "^3.10"
uvicorn = "^0.17"

[tool.poetry.dev-dependencies]
black = "^22.1"
docformatter = "^1.4"
flake8 = "^4.0"
flake8-bugbear = "^22.1"
isort = "^5.9.1"
mypy = "^0.931"
pytest = "^7.0"
pytest-cov = "^3.0.0"
requests = "^2.27.1"

[tool.poe.env]
LINT_TARGETS = "fastapi_sample tests"

[tool.poe.tasks]
fmt-black = "black $LINT_TARGETS"
fmt-docformatter = "docformatter -ri $LINT_TARGETS"
fmt-isort = "isort $LINT_TARGETS"
lint-black = "black --check --diff $LINT_TARGETS"
lint-docformatter = "docformatter -rc $LINT_TARGETS"
lint-flake8 = "flake8 $LINT_TARGETS"
lint-isort = "isort --check --diff $LINT_TARGETS"
lint-mypy = "mypy $LINT_TARGETS"
lint-pyright = "pyright $LINT_TARGETS"
fmt = ["fmt-isort", "fmt-black", "fmt-docformatter"]
lint = ["lint-pyright", "lint-mypy", "lint-flake8", "lint-docformatter", "lint-black", "lint-isort"]
start = "uvicorn --host 0.0.0.0 fastapi_sample:app"
test = "pytest"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
strict = true
implicit_reexport = true
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"

typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnnecessaryIsInstance = "none"
reportUntypedFunctionDecorator = "none"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=fastapi_sample"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
